--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.6.1"
 
+flutter_icons:
+  image_path: "assets/icon/inkmeup.png"
+  android: true
+  ios: false
+
+dependency_overrides:
+  image: 2.0.7
+# https://github.com/fluttercommunity/flutter_launcher_icons/issues/104
+# remember, i used 'flutter pub run flutter_launcher_icons:main' first to change
+# icons.
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
