--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 #
-android/google-services.json
+android/app/google-services.json
+mynotes.txt
