added filler data on appointments.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
     - assets/home_drawer_header.jpg
     - assets/home_drawer_header2.png
     - assets/home_drawer_header5.jpg
+    - assets/tattoo.jpg
+    - assets/tattoo_1.jpg
   # remember to 'packages get' to get the package to import the image.
 
 
